--- a/part-1/1-parent-child/index.html
+++ b/part-1/1-parent-child/index.html
@@ -24,9 +24,10 @@
         </div>
         <div class="message">
           <div class="message__author">Habiba</div>
-          <p class="message__content">
+          <p class="times__content">
             I can meet on Tuesday and Wednesday after 4.
           </p>
+          <span class="message__time">7:15pm</span>
         </div>
       </div>
     </div>
