--- a/part-1/1-parent-child/index.html
+++ b/part-1/1-parent-child/index.html
@@ -27,7 +27,7 @@
           <p class="times__content">
             I can meet on Tuesday and Wednesday after 4.
           </p>
-          <span class="message__time">7:15pm</span>
+          <span class="msg">7:15pm</span>
         </div>
       </div>
     </div>
