--- a/part-3/24-dietary/index.html
+++ b/part-3/24-dietary/index.html
@@ -20,6 +20,14 @@
 
         <form>
           <!-- Your multiple choice goes here -->
+          <fieldset>
+            <legend>Please select all of your dietary requirements</legend>
+            <label> <input type="checkbox" name="halal" /> Halal</label>
+            <label> <input type="checkbox" name="kosher" /> Kosher</label>
+            <label> <input type="checkbox" name="vegetarian" /> Vegetarian</label>
+            <label> <input type="checkbox" name="vegan" /> Vegan</label>
+            <label> <input type="checkbox" name="glutenfree" /> Gluten Free</label>
+          </fieldset>
           <button type="submit">Submit</button>
         </form>
       </main>
