--- a/part-3/20-labels/index.html
+++ b/part-3/20-labels/index.html
@@ -11,9 +11,11 @@
   <body>
     <div class="site-wrapper">
       <main>
-        <form method="GET" action="https://www.google.com/search">
-          <!-- Add a label here -->
-          <input type="text" name="q" />
+        <form method="get" action="https://www.google.com/search">
+          <label for="search-input">
+            Search on Google.
+            <input type="text" name="q" id="search-input" />
+          </label>
         </form>
       </main>
     </div>
