--- a/part-3/25-shirt-size/index.html
+++ b/part-3/25-shirt-size/index.html
@@ -30,6 +30,14 @@
               </td>
               <td>
                 Medium
+                <form>
+                  <label class="screen-reader">Choose a size</label>
+                  <select>
+                    <option>Small</option>
+                    <option selected>Medium</option>
+                    <option>Large</option>
+                  </select>
+                </form>
               </td>
               <td>
                 1
