--- a/part-3/25-shirt-size/index.html
+++ b/part-3/25-shirt-size/index.html
@@ -1,3 +1,5 @@
+ines (53 sloc) 1.56 KB
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -30,6 +32,14 @@
               </td>
               <td>
                 Medium
+                <form>
+                  <label class="screen-reader">Choose a size</label>
+                  <select>
+                    <option>Small</option>
+                    <option selected>Medium</option>
+                    <option>Large</option>
+                  </select>
+                </form>
               </td>
               <td>
                 1
